k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-backend-service
  labels:
    app: task-manager-backend
spec:
  selector:
    app: task-manager-backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: task-manager-frontend-service
  labels:
    app: task-manager-frontend
spec:
  selector:
    app: task-manager-frontend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: task-manager-ingress-service
  labels:
    app: task-manager-frontend
spec:
  selector:
    app: task-manager-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
